--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-packagejson": "^2.5.0",
     "prettier-plugin-tailwindcss": "0.5.4"
   },
   "engines": {
